--- a/src/notebooks/norm.ipynb
+++ b/src/notebooks/norm.ipynb
@@ -18,7 +18,7 @@
     }
    ],
    "source": [
-    "from transformer.norm.LayerNormalization import LayerNorm"
+    "from models.norm.LayerNormalization import LayerNorm"
    ]
   },
   {
